created a Docker image for local build purposes